# water_isotope_tracer_run_analysis

./: .gitignore
examples/: access_zarr.ipynb  pyproject.toml
general_analysis/: data_checks_1.ipynb  environment.yaml  pyproject.toml
preprocess_data/: add_cf_conventions.py  build_variable_list.py  build_zarr.py  build_zarr_submit_pbs.sh  cf_names_master.csv  check_timesteps.sh  files_with_less_than_365_timesteps.txt  fix_duplicate_times.py  generate_checksums.sh  kill_pulldata.sh  kill_split_by_year.sh  pulldata-mon.sh  pulldata.conf  pulldata.sh  pulldata_submit_pbs.sh  pyproject.toml  split_by_year.conf  split_by_year.sh  split_by_year.test.conf  split_by_year_cleanup_temp.sh  split_by_year_submit_pbs.sh  variable_list.csv  variable_list_with_cf.csv
preprocess_data/assets/: variables_to_preprocess_tag.csv  variables_to_preprocess_vanilla_day.csv  variables_to_preprocess_vanilla_month.csv
preprocess_data/completion_checks/: zarr_build_completion.json
preprocess_data/config/: config_build_zarr.yaml
preprocess_data/utils/: __init__.py  path_utils.py
