[project]
name = "water_isotope_tracer_run_analysis_general_analysis"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "cftime>=1.6.5",
    "dask>=2026.1.2",
    "jupyter>=1.1.1",
    "netcdf4>=1.7.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "xarray>=2026.2.0",
    "zarr>=3.1.5",
]
